compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__functions__calling_never_function.snap
---
source: compiler-core/src/javascript/tests/functions.rs
expression: "\npub fn main() {\n  bottom()\n}\n\npub fn bottom() -> Never {\n  bottom()\n}\n"
---
export function bottom() {
  while (true) {
    
  }
}

export function main() {
  return bottom();
}
