compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__functions__case_in_call.snap
---
source: compiler-core/src/javascript/tests/functions.rs
expression: "pub fn main(f, x) {\n  f(case x {\n    1 -> 2\n    _ -> 0\n  })\n}\n"
---
----- SOURCE CODE
pub fn main(f, x) {
  f(case x {
    1 -> 2
    _ -> 0
  })
}


----- COMPILED JAVASCRIPT
export function main(f, x) {
  let _block;
  if (x === 1) {
    _block = 2;
  } else {
    _block = 0;
  }
  return f(_block);
}
